# tau-polarization-icecube

./: .gitignore  CITATION.cff  README.md  environment.yml  environment_g4.yml  environment_g4_no_versions.yml  environment_icecube.yml  environment_icecube_no_versions.yml  explore.ipynb
.agents/skills/geant4/: SKILL.md
.agents/skills/geant4/references/: application-structure.md  building-and-cvmfs.md  macros-and-visualization.md
icecube-tau-decays/: BSKLNBaseRESPXSec2014.cxx  BSKLNBaseRESPXSec2014.h  README.md  analytic_tau_pol.ipynb  analytic_tau_pol_dis.cc  analytic_tau_pol_dis_int.C  analytic_tau_pol_dis_int.cc  analytic_tau_pol_res_int.C  analytic_tau_pol_res_int.cc  bypdf.C  check_res_formulas.ipynb  compute_xsec_genie.C  convert_genie.py  convert_tau_decay_file.py  crv98lo_pdf.C  crv98lo_pdf.cc  crv98lo_pdf_eval.C  csv2hepmc.cc  csv2hepmc.ipynb  decay_taus.cc  decay_taus.sh  decay_taus_debug.cc  dis_f_calc.sh  env_simplified.yml  generate_events.sh  genie_dis_code.cc  genie_event_analysis.ipynb  genie_pol.csv  genie_tau_decays_event_info.csv  get_pol_genie.C  get_pol_genie.cc  grv98lo_pdf.C  icecube_event_analysis.ipynb  plot_hepmc.ipynb  preprocess_event_info.py  pythia_tau_decay.cc  pythia_tau_decay.py  rho_e_distribution.csv  settings.yaml  tau_polarization.py  (+5 more)
learn-achilles/: histos_g4lbne_v3r5p4_QGSP_BERT_OptimizedEngineeredNov2017_neutrino_LBNEND_globes_flux.txt  run_dune.yml
learn-geant4/: g4_install_commands.txt
learn-geant4/B1-build/: G4History.macro  exampleB1  vis.mac
learn-geant4/ice/: init_vis.mac  vis.mac
learn-geant4/ice-11-2/: CMakeLists.txt  FindTauola++.cmake  README.md  exampleB1.cc  init_vis.mac  run_decays.mac  vis.mac
learn-geant4/ice-11-2/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  SensitiveDetector.hh  SteppingAction.hh  TauolaDecayerPhysics.hh  TrackingAction.hh
learn-geant4/ice-11-2/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SensitiveDetector.cc  SteppingAction.cc  TauolaDecayer.cc  TauolaDecayerPhysics.cc  TrackingAction.cc
learn-geant4/ice/include/: G4NeutrinoPhysics.hh  G4NeutrinoPhysicsMessenger.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
learn-geant4/ice/src/: DetectorConstruction.cc  G4NeutrinoPhysics.cc  G4NeutrinoPhysicsMessenger.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
learn-geant4/py8decayer/src/: Py8DecayerPhysics.cc
learn-geant4/tauoladecayer/: CMakeLists.txt  FindTauola++.cmake  GNUmakefile  tauola_decayer.cc
learn-geant4/tauoladecayer/include/: ActionInitialization.hh  PhysicsList.hh  SingleParticleGun.hh  TauolaDecayer.hh  TrackingAction.hh
learn-geant4/tauoladecayer/src/: ActionInitialization.cc  DetConstruction.cc  PhysicsList.cc  SingleParticleGun.cc  TauolaDecayer.cc  TauolaDecayerPhysics.cc  TrackingAction.cc
learn-genie/: env_simplified.yml  environment.yml  genie_tau_pol_data.csv  get_pol_genie.cc  gntp.0.ghep.root  history.txt
learn-tauola/: decay_taus.c  decay_taus.cc  single_tau.c  taumain_hepevt_example.c  taumain_hepmc3_stand_alone_example.c
learn-tauola/examples/: README  README-PYTHIA-VERSIONS  configure  configure.in  make.inc.in  single_tau_gun_example.c  single_tau_gun_example.conf  taumain_hepmc3_stand_alone_example.c  taumain_pythia_example.c  taumain_pythia_example.conf  taummk_pythia_example.c  taummk_pythia_example.conf
learn-tauola/examples/attic/: DebugParticle.h  pp-VBF2H.conf  pp-bg2tH+-.conf  pp-gg2H.conf  pp-gg2bbA.conf  pp-gg2bbH.conf  pp-qbar2H.conf  pp-tt2WbH+-b.conf  pp2W.conf  pp2Z.conf  taumain_pythia_example.c-debug  taumain_pythia_example.c-debug-FSR=OFF  taumain_pythia_example.c-debug-basic  taumain_pythia_example.c-eksperyment  taumain_pythia_example.c-new
learn-tauola/examples/testing/: README  tauola_test.c  test.inc
learn-tauola/examples/testing/EW-PLOTS/: README  draw.C  plots.c
learn-tauola/examples/testing/H/: RhoRhoUserTreeAnalysis.C
learn-tauola/examples/testing/W/: SETUP_W+.C  SETUP_W-.C  mc-tester.W+.original.root  mc-tester.W-.original.root  pythia_W.conf
neutrino-samples/analysis_a/: hyperplanes_example.ipynb  hyperplanes_muon.csv  hyperplanes_nue_cc.csv  hyperplanes_nutau_cc.csv  reproduce.ipynb
neutrino-samples/analysis_b/: data.csv  hyperplanes_all_nc.csv  hyperplanes_example.ipynb  hyperplanes_nue_cc.csv  hyperplanes_numu_cc.csv  hyperplanes_nutau_cc.csv  muons.csv  readme.txt
recreate-tau-appearance/analysis_a/: data.csv  hyperplanes_all_nc.csv  hyperplanes_example.ipynb  hyperplanes_numu_cc.csv  muon_mc.csv  readme.txt  reproduce.ipynb
utils/: __init__.py  br.py  hepmc_io.py  plotting.py
